<resources>

    <string name="google_android_geo_api_key">AIzaSyA11IopJzen3YKBZ6UINk6dvxXkgTEB620</string>
    <string name="facebook_app_id">675264612618373</string>
    <string name="fb_login_protocol_scheme">fb675264612618373</string>

    <string name="app_name">LIST101</string>
    <string name="server_error">Server error</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="settings">Settings</string>
    <string name="list101_global">LIST101 Global</string>
    <string name="sign_up">Sign Up</string>

    <string name="fragment_sign_up_facebook_login_button_title">Facebook</string>

    <string name="fragment_user_list_popular_points_suffix">PP</string>
    <string name="fragment_user_list_influential_points_suffix">IP</string>

    <string name="fragment_signup_map_title">What city do you live in?</string>
    <string name="fragment_signup_map_chose_button_title">IS THIS YOUR CITY</string>

    <string name="fragment_map_turn_on_location_permission">Turn on location permission and we show your position on the map.</string>
    <string name="fragment_map_turn_on_location">Turn on location</string>
    <string name="fragment_google_search_results_location_not_found">We didn\'t recognize that location</string>

    <string name="menu_bottom_navigation_talents">Feed</string>
    <string name="menu_bottom_navigation_profile_you">You</string>
    <string name="menu_bottom_navigation_messages">Messages</string>
    <string name="menu_bottom_navigation_notifications">Notifications</string>

    <string name="settings_fragment_reactivation_dialog_text">You are about to create a new profile on LIST101. However, you already have an old profile which is de-activated. Would you like to re-activate your old profile or create a new one? If you choose to create a new one, your old profile will be deleted.</string>
    <string name="settings_fragment_reactivation_dialog_title">Re-activate or create new profile?</string>
    <string name="settings_fragment_reactivation_dialog_create_button_title">Create new</string>
    <string name="settings_fragment_reactivation_dialog_reactivate_button_title">Re-activate</string>

    <string name="fragment_check_in_search_search_header">Search for a place you want to check in this post.</string>

    <string name="app_title">List101</string>
    <string name="fragment_signup_score_subtitle">Calculating your preseeding score</string>
    <string name="fragment_signup_score_boost_title">Boost your score with</string>
    <string name="fragment_signup_score_not_now_button">Not now</string>
    <string name="fragment_signup_score_see_my_ranking">See my ranking</string>

</resources>
